--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "npx tailwindcss -i ./src/input.css -o ./src/output.css --watch",
     "build:prod": "npx tailwindcss -i ./src/input.css -o ./src/output.css --minify",
+    "vercel-build": "npm run build:prod",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
